eks/pod_svc.yaml
# ---------------------------------------------------------
# 1. Service: 외부에서 접속 가능한 로드밸런서(대문) 정의
# ---------------------------------------------------------
apiVersion: v1
kind: Service
metadata:
  name: web-project-svc # 서비스의 이름
  annotations: # [핵심] AWS Load Balancer Controller에 전달할 세부 옵션
    # AWS에서 최신형 NLB(Network Load Balancer)를 생성하도록 지정
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-security-groups: "sg-0ed5d716165c1f726,sg-0f197175ce0181d02"
    # 보안 그룹에 특정 IP 또는 IP대역만 허용하고 싶다면 아래 주석 활용 (선택사항)
    # service.beta.kubernetes.io/load-balancer-source-ranges: "0.0.0.0/0, 10.0.0.0/20"
spec:
  type: LoadBalancer # AWS의 로드밸런서 서비스와 연동하겠다는 타입 선언
  selector:
    app: web-project # 위에서 만든 nginx 라벨을 가진 파드들로 트래픽을 전달
  ports:
    - name: http # [리스너 1] 이름 지정 (포트가 여러 개일 땐 필수)
      protocol: TCP
      port: 80 # 로드밸런서가 외부에서 받는 포트
      targetPort: 80 # 실제 파드로 전달되는 포트
#   - name: custom-port # [리스너 2] 추가된 리스너
#      protocol: TCP
#      port: 8000 # 외부에서 8080으로 접속하면
#      targetPort: 8000 # 파드의 80번으로 전달 (포트 포워딩 역할)
---
# ---------------------------------------------------------
# 2. Deployment: 애플리케이션(Nginx) 컨테이너 실행 정의
# ---------------------------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-deployment # 이 배포의 이름
spec:
  replicas: 2 # [요청 개수] 처음에 띄울 파드의 개수 (요청하신 2개)
  selector:
    matchLabels:
      app: web-project # 이 라벨이 붙은 파드들을 관리하겠다는 선언
  template:
    metadata:
      labels:
        app: web-project # 생성될 파드에 부여할 라벨 (위의 selector와 일치해야 함)
    spec:
      containers:
        - name: nginx
          image: 036333380579.dkr.ecr.ap-northeast-2.amazonaws.com/moon9659/nginx:aws-test
          ports:
            - containerPort: 80 # 컨테이너 안에서 Nginx가 사용하는 포트
          resources: # [중요] HPA가 CPU 사용량을 계산하기 위한 기준 설정
            requests:
              cpu: "100m" # [예약] "최소한 이만큼은 보장해줘" (스케줄링 기준)
              memory: "128Mi"
            limits:
              cpu: "250m" # [한계] "아무리 바빠도 0.5코어 이상은 쓰지마" (강제 제한)
              memory: "256Mi"

        - name: fastapi
          image: 036333380579.dkr.ecr.ap-northeast-2.amazonaws.com/moon9659/fastapi:latest
          ports:
            - containerPort: 8000 # FastAPI가 사용하는 포트
          resources:
            requests:
              cpu: "100m" # [예약] "최소한 이만큼은 보장해줘" (스케줄링 기준)
              memory: "128Mi"
            limits:
              cpu: "500m" # [한계] "아무리 바빠도 0.5코어 이상은 쓰지마" (강제 제한)
              memory: "256Mi"
